# Citrine-Renderer

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
Citrine/include/: citrine.h
Citrine/src/: citrine.cpp  main.cpp
